# src/main/java/apinexo/core/apis/testing/controller/ZillowController.java
@@ -1,20 +1,32 @@
 package apinexo.core.apis.testing.controller;
 
-import java.util.Map;
-
 import org.springframework.http.ResponseEntity;
-import org.springframework.validation.annotation.Validated;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.ModelAttribute;
+import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestMethod;
 import org.springframework.web.bind.annotation.RestController;
 
+import apinexo.core.apis.testing.facade.CommonFacade;
+import jakarta.servlet.http.HttpServletRequest;
+import lombok.RequiredArgsConstructor;
+
 @RestController
+@RequiredArgsConstructor
 @RequestMapping("/zillow")
 public class ZillowController {
 
-    @GetMapping("/search")
-    public ResponseEntity<Object> search(@Validated @ModelAttribute final TestingInternalRequest request) {
-        return ResponseEntity.ok(Map.of("message", "Zillow API: " + request.getQuery()));
+    private final CommonFacade facade;
+
+    @RequestMapping(value = "/**", method = { RequestMethod.GET, RequestMethod.POST })
+    public ResponseEntity<?> handleDynamicApi(HttpServletRequest request, @RequestBody(required = false) String body) {
+        String path = request.getRequestURI();
+        String method = request.getMethod();
+        String query = request.getQueryString();
+        String baseUrl = "http://45.63.16.213:8080/rapidapi/zillow/com";
+        String url = baseUrl + path.replace("/zillow", "");
+        if (query != null) {
+            url += "?" + query;
+        }
+        return facade.forwardToThirdParty(url, method, query, body);
     }
 }
